----------------------------------------------------
-Now kspread can recognize scientific format when you write
1.25E-5
-Imporved kspread_dlg_layout
=>now I move backgroundcolor to pattern page
so now you can see pattern with its backgroundcolor
-Imporved show example format, I think that it works.
-Add new functions : DECHEX convert a decimal number to hexadecimal
DECBIN, DECOCT
-Add new fraction format (One digit, two digits and three digits)
Algo gave by jp martin
-Add functions documentations.

Torben changes:
-Rewritten drawing code.
It's very nice.
Correct some bugs, etc...

2000-07-16-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Add new script functions setTextBold(),setTextUnderLine() etc...


Summary 2000-07-16 ->2000-07-20
Torben corrected bug in save/load embedded component
=>now you can load a kspread file with kchart file
-corrected print bug.


2000-07-20-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now vertical text and multirow works when cell merged

2000-07-22-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-bug fix when I copy/paste cells (setPrecision)

2000-07-24-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now when a formula is a time or date, change format to time or date
-Now kspread doesn't recognize money format into formula
because in France for example when you write : =F6, kspread
believes that is 6.00 F
=>it's not a good idea.
It's the same think for DM

2000-07-26-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Bug fix : now adjust area reworks when you change size font
or set "vertical text" or change angle etc...
Text size and position are refreshing
-Bug fix : now text color works when you used "conditional cell
attributes" and when you make "negative format" (text color
is red)
